fix(a11y): fixes contrast in HomeTopics carousel

--- a/client/src/components/preview/HomePage.scss
+++ b/client/src/components/preview/HomePage.scss
@@ -181,6 +181,19 @@
           }
         }
       }
+      // a11y: fixes unsufficient contrast
+      .carousel .slick-arrow:before {
+        opacity: 0.5;
+      }
+      .carousel .slick-arrow:hover:before {
+        opacity: 1.0;
+      }
+      .slick-dots li button:before {
+        opacity: 0.4;
+      }
+      .slick-dots li button:hover:before, .slick-dots li button:focus:before {
+        opacity: 1.0;
+      }
     }
 
     .TopicCarousel {
